# CodeCoach-AI

./: .env.example  .gitignore  ARCHITECTURE_PLAN.md  Makefile  README.md  demo.bat  docker-compose.demo.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  start.bat  start.sh  turbo.json
.github/: settings.json
Docs/: DEPLOYMENT.md  DOCKER_COMMANDS.md  📐 Software Design Document — CodeCoach AI .md
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  qa.py  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: __init__.py  coach.py  debug.py  health.py  question_validation.py  questions.py  run.py  validation.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  questions.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  coach.py  execution.py  health.py  question.py  question_validation_schemas.py  schemas.py
backend/app/services/: __init__.py  nim_service.py  piston_service.py  question_validator.py  questions_service.py  simple_validators.py
backend/app/use_cases/: __init__.py  base.py  validate_function_signature.py  validate_output_format.py  validate_solution.py  validate_starter_code.py  validate_structure.py  validate_test_cases.py  validate_time_limits.py
backend/questions/: questions.json  sample_questions.json
backend/scripts/: simple_validation_demo.py
backend/tests/: README.md  conftest.py  test_requirements.txt  test_simple_validators.py
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_coach_endpoints.py  test_health_endpoints.py  test_questions_endpoints.py  test_run_endpoints.py  test_validators_integration.py
backend/tests/performance/: test_load_limits.py
backend/tests/security/: test_security_vulnerabilities.py
backend/tests/unit/: test_boundary_conditions.py  test_error_handler.py  test_java_validator.py  test_javascript_validator.py  test_output_comparison.py  test_python_validator.py  test_question_validation_use_cases.py  test_results_display.py  test_test_runner.py
codecoach-ai/: README.md  package-lock.json  package.json  rules.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  (+2 more)
(+95 files in other folders)
